--- a/app/src/main/res/layout/fragment_sell.xml
+++ b/app/src/main/res/layout/fragment_sell.xml
@@ -4,11 +4,19 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewListings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="72dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sell - Your Listings"
-        android:textSize="24sp"
-        android:layout_gravity="center"/>
-</FrameLayout>
+        android:src="@android:drawable/ic_input_add"
+        android:contentDescription="Add Item"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="24dp"/>
 
+</FrameLayout>
