--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_buy"
+        android:id="@+id/nav_home"
+        android:icon="@android:drawable/ic_menu_home"
+        android:title="" />
+    <item
+        android:id="@+id/nav_search"
         android:icon="@android:drawable/ic_menu_search"
+        android:title="Search" />
+    <item
+        android:id="@+id/nav_buy"
+        android:icon="@drawable/cart_icon"
         android:title="Buy" />
     <item
         android:id="@+id/nav_sell"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/sell_icon_nav"
         android:title="Sell" />
+    <item
+        android:id="@+id/nav_profile"
+        android:icon="@android:drawable/ic_menu_myplaces"
+        android:title="Profile" />
 </menu>
