--- a/app/src/main/res/layout/listing_item.xml
+++ b/app/src/main/res/layout/listing_item.xml
@@ -57,12 +57,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
-        android:layout_marginEnd="8dp"/>
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#028485"/>
 
     <Button
         android:id="@+id/btnDeleteListing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"/>
+        android:text="Delete"
+        android:backgroundTint="#028485"/>
 
 </LinearLayout>
