--- a/app/src/main/res/layout/fragment_buy.xml
+++ b/app/src/main/res/layout/fragment_buy.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Buy - Browse Items"
-        android:textSize="24sp"
-        android:layout_gravity="center"/>
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewItems"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp"/>
 
+</FrameLayout>
