--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -27,6 +27,14 @@
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"/>
 
+        <ImageView
+            android:id="@+id/imgItemPhotoPreview"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:scaleType="centerCrop"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"/>
+
         <Button
             android:id="@+id/btnAddPhoto"
             android:layout_width="wrap_content"
