--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -77,6 +77,14 @@
         android:enabled="false"
         android:layout_marginTop="24dp"/>
 
+    <Button
+        android:id="@+id/btnResendVerification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Resend verification email"
+        android:layout_marginTop="12dp"
+        android:enabled="true"/>
+
     <TextView
         android:id="@+id/tvGoToLogin"
         android:layout_width="wrap_content"
